--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   },
   "homepage": "https://github.com/magrateya/goit-js-hw-13-image-finder#readme",
   "devDependencies": {
+    "@pnotify/core": "^5.1.2",
     "gh-pages": "^3.1.0",
     "parcel-bundler": "^1.12.4",
     "parcel-plugin-handlebars-precompile": "^1.0.2"
