--- a/.prettierrc.json
+++ b/.prettierrc.json
@@ -8,5 +8,6 @@
   "bracketSpacing": true,
   "jsxBracketSameLine": false,
   "arrowParens": "avoid",
-  "proseWrap": "always"
+  "proseWrap": "always",
+  "WordWrapColumn": "80"
 }
