--- a/package.json
+++ b/package.json
@@ -25,5 +25,8 @@
     "gh-pages": "^3.1.0",
     "parcel-bundler": "^1.12.4",
     "parcel-plugin-handlebars-precompile": "^1.0.2"
+  },
+  "dependencies": {
+    "basiclightbox": "^5.0.3"
   }
 }
